--- a/dental/_config.yml
+++ b/dental/_config.yml
@@ -13,18 +13,10 @@ clinic_address: >-
 
 # Build settings
 markdown: kramdown
-#theme: minima
+theme: minima
 plugins:
   - jekyll-feed
-
-theme: null
-remote_theme: null
-
-include:
-  - _includes
-  - _layouts
-  - dental
-
+  
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
